--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/abort-controller": "^3.271.0",
+    "@aws-sdk/client-s3": "^3.271.0",
+    "aws-sdk": "^2.1315.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "multer": "1.4.5-lts.1"
+    "multer": "1.4.5-lts.1",
+    "multer-s3": "^2.10.0"
   },
   "devDependencies": {
     "@lskjs/eslint-config": "3.0.0-alpha.37",
